--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/styles/style.css">
-    <title>Quiz de Ortografia</title>
+    <title>Jogo da Cobrinha</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Quiz de Ortografia</h1>
-    <div id="quiz">
-        <div class="question active">
-            <p>1. Qual é a ortografia correta?</p>
-            <button onclick="nextQuestion('a')">A) Exceção</button>
-            <button onclick="nextQuestion('b')">B) Excessão</button>
-        </div>
-        <div class="question">
-            <p>2. Qual é a ortografia correta?</p>
-            <button onclick="nextQuestion('a')">A) Privilegio</button>
-            <button onclick="nextQuestion('b')">B) Privilégio</button>
-        </div>
-    </div>
+    <canvas id="game" width="900" height="900"></canvas>
+</ul>
     <script src="script.js"></script>
 </body>
 </html>
